fix alignment of elements (minor css)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -41,7 +41,6 @@ html {
 }
 
 .ascribe-default-app {
-    max-width: 90%;
     padding-top: 70px;
     overflow-x: hidden;
 }
